<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding">

    <TextView
        android:id="@+id/tour_title"
        style="@style/ContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tour_demo_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tour_abstract"
        style="@style/InfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:justificationMode="inter_word"
        android:text="@string/tour_demo_abstract"
        app:layout_constraintTop_toBottomOf="@+id/tour_title"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tour_reviews_label"
        style="@style/ContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/tour_reviews_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tour_abstract" />

    <TextView
        android:id="@+id/tour_reviews_sort"
        style="@style/ContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/tour_reviews_sort_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tour_reviews_label" />

    <Spinner
        android:id="@+id/tour_reviews_sort_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tour_reviews_sort"
        app:layout_constraintTop_toBottomOf="@+id/tour_reviews_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tour_reviews_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@+id/tour_reviews_sort" />

</androidx.constraintlayout.widget.ConstraintLayout>