<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large_padding">

        <TextView
            android:id="@+id/review_item_date"
            style="@style/InfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/small_padding"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/review_item_demo_date" />

        <TextView
            android:id="@+id/review_item_author_photo_placeholder"
            android:layout_width="@dimen/review_item_photo_size"
            android:layout_height="@dimen/review_item_photo_size"
            android:background="@drawable/photo_placeholder_background"
            android:gravity="center"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_item_date" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/review_item_author_photo"
            android:layout_width="@dimen/review_item_photo_size"
            android:layout_height="@dimen/review_item_photo_size"
            android:paddingBottom="@dimen/small_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_item_date" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/review_item_photo_barrier_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="review_item_author_photo,review_item_author_photo_placeholder" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/review_item_photo_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="review_item_author_photo,review_item_author_photo_placeholder" />

        <TextView
            android:id="@+id/review_item_author_label"
            style="@style/InfoTextHighlightSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/review_item_author_label"
            app:layout_constraintBottom_toTopOf="@+id/review_item_author_info"
            app:layout_constraintStart_toEndOf="@+id/review_item_photo_barrier_end"
            app:layout_constraintTop_toBottomOf="@+id/review_item_date" />

        <TextView
            android:id="@+id/review_item_author_info"
            style="@style/InfoTextHighlightLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            app:layout_constraintBottom_toTopOf="@+id/review_item_rating"
            app:layout_constraintStart_toEndOf="@+id/review_item_photo_barrier_end"
            app:layout_constraintTop_toBottomOf="@+id/review_item_author_label"
            tools:text="@string/review_item_author_demo_info" />

        <RatingBar
            android:id="@+id/review_item_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_item_photo_barrier_bottom" />

        <View
            android:id="@+id/review_item_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/colorInfo"
            app:layout_constraintBottom_toTopOf="@+id/review_item_text_label"
            app:layout_constraintTop_toBottomOf="@+id/review_item_rating" />

        <TextView
            android:id="@+id/review_item_text_label"
            style="@style/InfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/review_item_text_label"
            app:layout_constraintTop_toBottomOf="@+id/review_item_rating" />

        <TextView
            android:id="@+id/review_item_text"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/review_item_text_label"
            tools:targetApi="o"
            tools:text="@string/review_item_demo_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
